--- a/src/config.yml
+++ b/src/config.yml
@@ -4,19 +4,21 @@
 # +------------------------------------------------------+ #
 ############################################################
 
-# This plugin is dedicated to addressing various well-known KitBattle exploits.
+version: "1.0.1"
+
+# This plugin is dedicated to addressing 2 well-known KitBattle exploits.
 # While the fixes are straightforward, the exploits themselves are rather intricate.
 
-# Note that this plugin is specifically designed for use with a KitBattle Advanced instance.
-# We are referring to KitBattle Advanced (Premium) and not the free version available on Bukkit.
-# In case you're unsure about the distinction, here's the link for your reference:
+# Note that this plugin is specially made for use with a KitBattle Advanced instance.
 # https://www.spigotmc.org/resources/kitbattle-advanced.2872/
 
-# Disclaimer
+# For details of the exploits, you may refer to our Spigot Page:
+# https://www.spigotmc.org/resources/112496/
+
 # Please be aware that this plugin is not officially affiliated with KitBattle Advanced.
 # We are simply enthusiastic KitBattle fans committed to resolving some of the issues.
 
-# Developed By Dennie
+# Patched By Dennie
 
 
 ############################################################
@@ -25,13 +27,11 @@
 # +------------------------------------------------------+ #
 ############################################################
 
-# In this section, we specify the list of worlds where this plugin will operate.
-# Please include all the worlds where your KitBattle arenas are located in this list.
-# If you're concurrently running KitBattle alongside other game modes, like survival,
-# it is advisable to utilize distinct worlds for KitBattle to prevent potential conflicts.
+# In this section, you can specify the list of worlds where this plugin operates on.
+# Simply include all the worlds where your KitBattle arenas are located to this list.
 
 world:
-  - "world"
+  - "pvp"
 
 
 ############################################################
@@ -40,79 +40,45 @@ world:
 # +------------------------------------------------------+ #
 ############################################################
 
-# Undoubtedly, the most widely recognized KitBattle exploit, the Iron Fist Bug,
-# has gained notoriety for allowing sword damage from a previously selected kit
-# to persist even after a player logs out and back in.
-
-# To reproduce this bug, follow these steps:
-# 1. Choose a kit and hold the sword in slot 1.
-# 2. Re-enter the server and join KitBattle.
-# 3. Utilize your bare fist (without holding any items) to strike another player
-# and observe the inflicted damage.
-
-# Surprisingly, your fist will inflict the same damage as the sword you used before
-# relogging, hence the moniker "Iron Fist Bug".
-
-# However, there's a significant twist to this bug:
-# After rejoining the server, perform the following actions:
-
-# 1. Relocate the kit selector item to a different hotbar slot.
-# To achieve this, press E, hover your cursor over a slot other than slot 1, and press 1.
-# 2. The kit selector will now have moved to the slot under your cursor.
-# 3. Select a kit but avoid holding or clicking the sword in slot 1 (to prevent damage from resetting).
-# 4. Now, utilize your fist (enhanced by soup) to strike another player and witness the damage.
-
-# As you can observe, the issue becomes evident: your fist, while holding soup, delivers an excessively
-# high amount of damage. This disproportionate damage originates from the previous sharpness V diamond sword.
-
-# Imagine a scenario where your previous kit included a sharpness V diamond sword but subpar armor.
-# Upon relogging, you select a different kit with a fully enchanted set of diamond armor but a suboptimal sword.
-# This discrepancy would ordinarily be problematic; however, your fist has already inherited the devastating
-# damage from the sharpness V sword, thereby disrupting kit balance.
-
-# In earlier iterations of KitBattle, there were instances where even the strength effect
-# could be inherited. However, it's worth noting that this issue has been partially rectified,
-# effectively diminishing the exploit's impact.
+# Undoubtedly the most long-lasting KitBattle exploit, The Iron Fist Exploit, also known
+# as The Damage Bug, has gained notoriety for allowing sword damage from a previously
+# selected kit to persist even after a player logs out and back in.
 
 # To effectively mitigate this problem, consider switching the kit selector to a sword item.
-# Remember, the exploit relies on clicking or holding the sword. What if we enforced the use
-# of a sword to select a kit? This measure decisively eliminates the bug.
-
-# To implement this safeguard, navigate to KitBattle's config.yml and modify the kit selector item
+# This can be done by navigating to KitBattle's config.yml and modify the kit selector item
 # as illustrated below:
 # Hotbar-Items:
 #   Kit-Selector:
 #     item: 'DIAMOND_SWORD : name:&7Kit Selector (&aRight click!&7)'
-# Other viable sword options include: WOODEN_SWORD, STONE_SWORD, IRON_SWORD, GOLD_SWORD.
+# Other viable sword options include WOODEN_SWORD, STONE_SWORD, IRON_SWORD, and GOLD_SWORD.
 
-# However, there's another aspect to this story.
-# Remember the existence of the /kb selectkit command?
-# Abusers can conveniently bypass the kit selector with this command to persistently exploit the bug.
-# Furthermore, this command is accessible to all players and has no permission node available to negate.
+# Very unfortunately, this is still not sufficient to completely rule out this exploit since
+# abuser can easily bypass the kit selector with the "/kb selectkit" command.
 
-# This is where we step in to offer assistance! Enabling the "block-kb-selectkit" option entirely disables
-# the command and its associated aliases. It is advisable to enable this option as /kb selectkit is largely
-# unnecessary, given that the kit selector can efficiently fulfill its role most of the time.
+# Enabling the "block-kb-selectkit" option disables entirely the "/kb selectkit" command
+# together with all its associated aliases.
 
 # Note: The "kbpatch.bypass" permission grants the ability to bypass this patch.
 
 block-kb-selectkit:
   enable: true
-  message: "&3[&bKBPatch&3] &7This command has been disabled."
+  message: "&3[&bKBPatch&3] &7This command has been disabled!"
 
 
 
-# In addition to the kit selector alteration, we offer an alternative solution
-# to address the Iron Fist Bug. This patch effectively prevents any items in the inventory
-# from being moved when the kit selector item is present. Consequently, players are compelled
-# to exclusively click on the kit selector in slot 1 to select a kit, thereby eliminating the bug.
+# Apart from changing the kit selector, we do offer an alternative solution to address
+# this exploit. The following patch effectively prevents any items in the inventory from
+# being moved when the kit selector item is present. Consequently, players are compelled
+# to exclusively click on the kit selector in slot 1 to select a kit, thereby eliminating
+# the bug.
 
 # Note: The "kbpatch.bypass" permission grants the ability to bypass this patch.
-# This permission is particularly valuable for staff members, as the inability to move items within
+# This permission is particularly useful for admins, as the inability to move items within
 # the inventory can be inconvenient when editing the arenas.
 
 iron-fist-patch:
-  # DO NOT enable this option if you already have XXX_SWORD as your kit selector item.
+  # DO NOT enable this patch if you already have XXX_SWORD as your kit selector item.
+  # In general, do NOT enable this patch if your kit selector item is a kit item.
   enable: true
   # The default kit-selector item for KitBattle is CHEST.
   kit-selector: "CHEST"
@@ -121,33 +87,23 @@ iron-fist-patch:
 
 ############################################################
 # +------------------------------------------------------+ #
-# |                   Kit Lock Patch                     | #
+# |                   Smuggling Patch                    | #
 # +------------------------------------------------------+ #
 ############################################################
 
-# The Kit Lock Bypass bug comes into play when a challenge setup is in place on the server,
-# and the "challenges.kit-lock" option is enabled within the KitBattle configuration.
+# The Smuggling Exploit, also known as The Teleport Bug, enables players to conveniently
+# transport kit items between arenas, resulting in the possession of items from multiple
+# kits, thereby disrupting the game balance.
 
-# This exploit enables players to transfer kit items from the free-for-all arena
-# (where all kits are accessible) into the kit-locked challenge arenas.
+# Practical use includes: transporting kit items from a normal arena into a kit-locked
+# challenge arena, or transporting previously used kit items back into the arena.
 
-# To replicate this bug, follow these steps:
-# 1. Join the challenge queue by utilizing the rod.
-# 2. While waiting for a match, select a kit and place some of the kit items in your
-# 4-slot crafting inventory.
-# 3. Use your cursor to hold the 5th item (if you have that many to transport).
-# 4. When a match begins, you'll be teleported to the challenge arena, carrying the items on your cursor
-# and within the crafting inventory.
-# 5. At this point, you'll need to reorganize the items before the countdown concludes.
-# 6. As everyone else is using the default kit while you possess non-default kit items,
-# you've successfully gained an unfair advantage.
-
-# This patch effectively resolves this issue by removing all items from your cursor and crafting
-# inventory upon teleportation. Once again, it's a straightforward yet highly effective fix.
+# This patch effectively resolves this issue by removing all items from your cursor and
+# crafting inventory upon teleportation.
 
 # Note: The "kbpatch.bypass" permission grants the ability to bypass this patch.
 
-kit-lock-patch:
+smuggling-patch:
   enable: true
 
 
@@ -159,4 +115,4 @@ kit-lock-patch:
 
 no-permission: "&3[&bKBPatch&3] &7You don't have permission to do this!"
 incorrect-syntax: "&3[&bKBPatch&3] &7Unknown command!"
-reload-config: "&3[&bKBPatch&3] &7Config reloaded."
+reload-config: "&3[&bKBPatch&3] &7Config reloaded!"
